--- a/Proyecto/packages.config
+++ b/Proyecto/packages.config
@@ -1,23 +1,57 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BarcodeLib" version="1.0.0.20" targetFramework="net46" />
-  <package id="BouncyCastle" version="1.8.6.1" targetFramework="net46" />
-  <package id="ClosedXML" version="0.95.4" targetFramework="net46" />
-  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net46" />
-  <package id="EntityFramework" version="6.4.4" targetFramework="net46" />
-  <package id="ExcelNumberFormat" version="1.0.10" targetFramework="net46" />
-  <package id="FontAwesome.Sharp" version="5.15.3" targetFramework="net46" />
-  <package id="iTextSharp" version="5.5.13.2" targetFramework="net46" />
-  <package id="itextsharp.xmlworker" version="5.5.13.2" targetFramework="net46" />
+  <package id="BouncyCastle" version="1.8.9" targetFramework="net46" />
+  <package id="BouncyCastle.Cryptography" version="2.5.1" targetFramework="net48" />
+  <package id="ClosedXML" version="0.104.2" targetFramework="net48" />
+  <package id="ClosedXML.Parser" version="1.3.0" targetFramework="net48" />
+  <package id="DocumentFormat.OpenXml" version="3.3.0" targetFramework="net48" />
+  <package id="DocumentFormat.OpenXml.Framework" version="3.3.0" targetFramework="net48" />
+  <package id="EntityFramework" version="6.5.1" targetFramework="net48" />
+  <package id="Enums.NET" version="5.0.0" targetFramework="net48" />
+  <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net48" />
+  <package id="ExtendedNumerics.BigDecimal" version="3000.0.4.132" targetFramework="net48" />
+  <package id="FontAwesome.Sharp" version="6.6.0" targetFramework="net48" />
+  <package id="iTextSharp" version="5.5.13.4" targetFramework="net48" />
+  <package id="itextsharp.xmlworker" version="5.5.13.4" targetFramework="net48" />
+  <package id="MathNet.Numerics.Signed" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.5" targetFramework="net48" />
+  <package id="Microsoft.Bcl.Cryptography" version="9.0.5" targetFramework="net48" />
+  <package id="Microsoft.Bcl.HashCode" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net46" />
-  <package id="NPOI" version="2.5.4" targetFramework="net46" />
-  <package id="Portable.BouncyCastle" version="1.8.6" targetFramework="net46" />
-  <package id="SharpZipLib" version="1.3.1" targetFramework="net46" />
-  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.0" targetFramework="net46" />
-  <package id="System.Data.SQLite" version="1.0.115.0" targetFramework="net46" />
-  <package id="System.Data.SQLite.Core" version="1.0.115.0" targetFramework="net46" />
-  <package id="System.Data.SQLite.EF6" version="1.0.115.0" targetFramework="net46" />
-  <package id="System.Data.SQLite.Linq" version="1.0.115.0" targetFramework="net46" />
-  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net46" />
-  <package id="System.IO.Packaging" version="4.0.0" targetFramework="net46" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.1" targetFramework="net48" />
+  <package id="NPOI" version="2.7.3" targetFramework="net48" />
+  <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net48" />
+  <package id="RBush" version="4.0.0" targetFramework="net48" />
+  <package id="SharpZipLib" version="1.4.2" targetFramework="net48" />
+  <package id="SixLabors.Fonts" version="1.0.1" targetFramework="net48" />
+  <package id="SixLabors.ImageSharp" version="3.1.8" targetFramework="net48" />
+  <package id="SkiaSharp" version="3.119.0" targetFramework="net48" />
+  <package id="SkiaSharp.NativeAssets.Linux.NoDependencies" version="3.119.0" targetFramework="net48" />
+  <package id="SkiaSharp.NativeAssets.macOS" version="3.119.0" targetFramework="net48" />
+  <package id="SkiaSharp.NativeAssets.Win32" version="3.119.0" targetFramework="net48" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.119.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.6.1" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="9.0.5" targetFramework="net48" />
+  <package id="System.Data.SQLite" version="1.0.119.0" targetFramework="net48" />
+  <package id="System.Data.SQLite.Core" version="1.0.119.0" targetFramework="net48" />
+  <package id="System.Data.SQLite.EF6" version="1.0.119.0" targetFramework="net48" />
+  <package id="System.Data.SQLite.Linq" version="1.0.119.0" targetFramework="net48" />
+  <package id="System.Formats.Asn1" version="9.0.5" targetFramework="net48" />
+  <package id="System.Formats.Nrbf" version="9.0.5" targetFramework="net48" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.Packaging" version="9.0.5" targetFramework="net48" />
+  <package id="System.IO.Pipelines" version="9.0.5" targetFramework="net48" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net48" />
+  <package id="System.Reflection.Metadata" version="9.0.5" targetFramework="net48" />
+  <package id="System.Resources.Extensions" version="9.0.5" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Pkcs" version="9.0.5" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Xml" version="9.0.5" targetFramework="net48" />
+  <package id="System.Text.Encoding.CodePages" version="9.0.5" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="9.0.5" targetFramework="net48" />
+  <package id="System.Text.Json" version="9.0.5" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.6.1" targetFramework="net48" />
+  <package id="ZXing.Net" version="0.16.10" targetFramework="net48" />
 </packages>
